<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Results">

    <TextView
        android:id="@+id/results_quizup_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/results_textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/results_score_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/results_score"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/results_display_score_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/results_bestScore_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/results_best_score"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/results_display_bestScore_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Button
        android:id="@+id/reset_Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reset_button"
        android:elevation="10dp"
        android:onClick="onReset"
        android:text="@string/results_reset_button"
        android:textColor="@color/results_button_text_color"
        android:textSize="25sp" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:elevation="10dp"
        android:onClick="onShareButtonClicked"
        android:text="@string/results_share"
        android:textColor="@color/results_button_text_color"
        android:textSize="25sp" />

</LinearLayout>