<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stardust"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.mayur.examyaar.Register"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/register_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/textDisplayColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/firstName_text"
            android:textColor="@color/textDisplayColor"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter First Name"
            android:inputType="textPersonName"
            android:textColor="@color/textDisplayColor"
            android:textColorHint="#696969" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/lastName_text"
            android:textColor="@color/textDisplayColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter Last Name"
            android:inputType="textPersonName"
            android:textColor="@color/textDisplayColor"
            android:textColorHint="#696969" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/text_dob"
            android:textColor="@color/textDisplayColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextDOB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            android:textColor="@color/textDisplayColor"
            android:textColorHint="#696969" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/email_text"
            android:textColor="@color/textDisplayColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_signup_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textDisplayColor"
            android:textColorHint="#696969" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/password_text"
            android:textColor="@color/textDisplayColor"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editText_signup_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/textDisplayColor"
            android:textColorHint="#696969" />
    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/reg_text" />
</LinearLayout>
