<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stardust"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large.Inverse"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/bottom_border"
        android:hint="@string/editText_Email"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/textDisplayColor"
        android:textColorHint="@color/textDisplayColor" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bottom_border"
        android:hint="@string/editText_Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/textDisplayColor"
        android:textColorHint="@color/textDisplayColor" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="SIGN IN"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorPrimary" />

</LinearLayout>